--- a/bs4-webcrawler/pyvenv.cfg
+++ b/bs4-webcrawler/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\
 include-system-site-packages = false
 version = 3.12.4
 executable = C:\python.exe
-command = C:\python.exe -m venv C:\Users\Administrator\py-WebCrawler\test
+command = C:\python.exe -m venv C:\Users\Administrator\py-WebCrawler\bs4-webcrawler
