설정 경로 변경

--- a/scrapy--webcrawler/pyvenv.cfg
+++ b/scrapy--webcrawler/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\
+home = C:\Users\Administrator\AppData\Local\Programs\Python\Python38
 include-system-site-packages = false
-version = 3.12.4
-executable = C:\Users\Administrator\py-WebCrawler\bs4-webcrawler\Scripts\python.exe
-command = C:\Users\Administrator\py-WebCrawler\bs4-webcrawler\Scripts\python.exe -m venv C:\Users\Administrator\py-WebCrawler\scrapy--webcrawler
+version = 3.8.0
